{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 72,
  "lineage": "5c86cf4f-2c36-41be-b4a0-3a885f194841",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "tesis_capitulo03",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d86c69530d0a048e",
            "arn": "arn:aws:ec2:us-east-1:888265290195:instance/i-07d526f7b66a7e469",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07d526f7b66a7e469",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08995026f64826db5",
            "private_dns": "ip-172-31-30-40.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.30.40",
            "public_dns": "ec2-34-207-149-112.compute-1.amazonaws.com",
            "public_ip": "34.207.149.112",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-012786fac072528bb",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "cap03-3_2_1-ej02"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b80042179db0ca2f",
            "tags": {
              "Name": "Instancia base"
            },
            "tags_all": {
              "Name": "Instancia base"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07a0f4e5fff7044e4"
            ]
          },
          "dependencies": [
            "aws_security_group.capitulo03-3_2_1-02"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "capitulo03-3_2_1-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:888265290195:security-group/sg-088bd69c5db3eaef1",
            "description": "Acceso SSH publico",
            "egress": [],
            "id": "sg-088bd69c5db3eaef1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "cap03-3_2_1-ej01",
            "name_prefix": "",
            "owner_id": "888265290195",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03307a75a5efef365"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "capitulo03-3_2_1-02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:888265290195:security-group/sg-07a0f4e5fff7044e4",
            "description": "Acceso SSH/HTTPS restringido",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07a0f4e5fff7044e4",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.0.2.0/24"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "203.0.113.0/24",
                  "198.51.100.0/24"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "cap03-3_2_1-ej02",
            "name_prefix": "",
            "owner_id": "888265290195",
            "revoke_rules_on_delete": false,
            "tags": {
              "Department": "Ingeniería en Ciencias y Sistemas",
              "Environment": "Desarrollo",
              "Name": "Ejemplo Capítulo 3. Sección 3.2.1"
            },
            "tags_all": {
              "Department": "Ingeniería en Ciencias y Sistemas",
              "Environment": "Desarrollo",
              "Name": "Ejemplo Capítulo 3. Sección 3.2.1"
            },
            "timeouts": {
              "create": "10m",
              "delete": "20m"
            },
            "vpc_id": "vpc-03307a75a5efef365"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    }
  ]
}